--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               class="mdl-textfield__input"
               type="text"
               pattern="-?[0-9]*(\.[0-9]+)?"
-              id="hours-work"
+              id="hours-worked"
             />
             <!-- mdl-textfield__label -->
             <label class="mdl-textfield__label" for="hours-worked"
