--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
               class="mdl-textfield__input"
               type="text"
               pattern="-?[0-9]*(\.[0-9]+)?"
-              id="height-of-triangle"
+              id="hourly-wage"
             />
             <!-- mdl-textfield__label -->
-            <label class="mdl-textfield__label" for="height-of-triangle"
+            <label class="mdl-textfield__label" for="hourly-wage"
               >Hourly wage ($)</label
             >
             <!-- class "mdl-textfield__error" -->
