--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <br>
         <div class="page-content-answer">
           <div id="salary"></div>
+          <div id="government"></div>
         </div>
         </br>
       </main>
